# realtime-graphics-cpp

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
.devcontainer/: devcontainer.json
.gemini/: styleguid.md  styleguide.md
.github/workflows/: ci.yml
0_0_helloworld/: CMakeLists.txt  main.cpp
0_1_helloworld/: CMakeLists.txt  main.cpp
0_1_hellowrold/: CMakeLists.txt
1_0_lerp/: CMakeLists.txt  main.cpp
1_1_lerptriple/: CMakeLists.txt  main.cpp  vec3.h
1_2_bilerp/: CMakeLists.txt  main.cpp
1_3_posterization/: CMakeLists.txt  main.cpp  math.h  vec2.h  vec3.h
1_4_polar/: CMakeLists.txt  main.cpp  math.h  vec2.h
1_5_polarrot/: CMakeLists.txt  main.cpp  math.h
1_6_hsv2rgb/: CMakeLists.txt  bool3.h  main.cpp  vec3.h
2_0_legacy/: CMakeLists.txt  main.cpp  vec2.h
2_1_binary/: CMakeLists.txt  color.h  main.cpp  math.h  vec2.h  vec3.h
2_2_hash1d/: CMakeLists.txt  main.cpp
2_3_hash2d3d/: CMakeLists.txt  main.cpp
common/: bool2.h  bool3.h  color.h  ivec2.h  mymath.h  uvec2.h  uvec3.h  vec2.h  vec3.h
tests/: CMakeLists.txt  golden_test.py  test_ivec2.cpp  test_mymath.cpp  test_uvec2.cpp  test_uvec3.cpp  test_vec2.cpp  test_vec3.cpp
tests/golden/: bilerp.ppm  binary.ppm  hash1d.ppm  hash2d3d.ppm  helloworld.ppm  helloworld2.ppm  hsv2rgb.ppm  legacy.ppm  lerp.ppm  lerptriple.ppm  polar.ppm  polarrot.ppm  posterization.ppm
